--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -10,3 +10,6 @@ author_profile: true
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
+* 2024 Spring MEEG671: Introduction to Robotics (Teaching Assistant)
+  * Supervisor: Dr. Panagiotis Artemiadis
